# loco-rs-workspace-issue-demo

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
config/: loco_app1.development.yaml  loco_app1.test.yaml
crates/loco_app1/: Cargo.toml
crates/loco_app1/examples/: playground.rs
crates/loco_app1/src/: app.rs
crates/loco_app1/src/mailers/: auth.rs
crates/loco_app1/src/models/: users.rs
crates/loco_app1/src/tasks/: seed.rs
crates/loco_app1/tests/models/: users.rs
crates/loco_app1/tests/requests/: auth.rs  notes.rs  prepare_data.rs  user.rs
crates/loco_app1/tests/tasks/: seed.rs
crates/loco_app1_migration/: Cargo.toml
crates/loco_app1_migration/src/: main.rs
crates/loco_app2/: Cargo.toml
crates/loco_app2/examples/: playground.rs
crates/loco_app2/src/: app.rs
crates/loco_app2/src/mailers/: auth.rs
crates/loco_app2/src/tasks/: seed.rs
crates/loco_app2/tests/models/: users.rs
crates/loco_app2/tests/requests/: auth.rs  notes.rs  prepare_data.rs  user.rs
crates/loco_app2/tests/tasks/: seed.rs
crates/loco_app2_migration/: Cargo.toml
crates/loco_app2_migration/src/: main.rs
crates/share_lib/: Cargo.toml
crates/share_lib/src/: lib.rs
